Test/Parser/Bad/bad_assign_expr1.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

x = (y = 2)
